--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -11,16 +11,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Set up GraalVM
+      uses: DeLaGuardo/setup-graalvm@master
       with:
-        java-version: 11
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        graalvm-version: '21.3.0.java11'
+    - name: install native-image
+      run: gu install native-image
     - name: Build JVM JAR
-      run: ./mvnw package -Dquarkus.package.type=uber-jar -Pversion="${{ github.event.release.tag_name }}"
+      run: ./mvnw package -Dquarkus.package.type=uber-jar -Drevision="${{ github.event.release.tag_name }}"
     - name: Upload JVM JAR
       id: upload-jar
+      if: ${{ !env.ACT }}
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -30,7 +31,7 @@ jobs:
         asset_name: cert2jwk-${{ github.event.release.tag_name }}.jar
         asset_content_type: application/octet-stream
     - name: Build Native
-      run: mvnw package -Dquarkus.package.type=native -Dquarkus.native.container-build=true -Pversion="${{ github.event.release.tag_name }}"
+      run: ./mvnw package -Pnative -Drevision="${{ github.event.release.tag_name }}"
     - name: Upload Native Image (Linux)
       id: upload-native-image-linux
       uses: actions/upload-release-asset@v1
