--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,28 @@
-name: build
-
+name: GraalVM Native Image builds
 on:
   push:
     branches:
-    - master
-    - 'feature/**'
-    
+      - master
   pull_request:
     branches:
-    - master
-    - 'feature/**'
-  workflow_dispatch:
-
+      - master
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    name: Build on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up GraalVM
-      uses: DeLaGuardo/setup-graalvm@master
-      with:
-        graalvm-version: '22.3.1.java11'
-    - name: install native-image
-      run: gu install native-image
-    - name: Grant execute permission for mvnw
-      run: chmod +x mvnw
-    - name: Build with maven
-      run: ./mvnw package -Pnative
+      - uses: actions/checkout@v3
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '17.0.8'
+          distribution: 'graalvm'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          native-image-job-reports: 'true'
+          components: 'native-image'
+      - name: Grant execute permission for mvnw
+        run: chmod +x mvnw
+      - name: Build with maven
+        run: ./mvnw package -Pnative
