--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-quarkus.log.console.enable=false
+quarkus.log.console.enabled=false
 quarkus.log.level=ERROR
-quarkus.log.file.enable=false
+quarkus.log.file.enabled=false
 quarkus.log.file.path=cert2jwk.log
 quarkus.log.file.level=ERROR
